Refactor percentile agg function to use new function registry.